--- a/index.html
+++ b/index.html
@@ -1,86 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandro Autoelétrica</title>
     <link rel="stylesheet" href="/css/estilo.css">
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="container-navg">
-            <figure>
-                <img src="/assets/logo-completa.png" alt="Sandro Autoelétrica">
-            </figure>
-            <nav>
-                <a href="#bateria">Baterias</a>
-                <a href="#">Serviços</a>
-                <a href="#comentarios">Depoimentos</a>
-                <a href="#location">Localização</a>
-            </nav>
-        </div>
+      <div class="container-navg">
+        <figure>
+          <img src="/assets/logo-completa.png" alt="Sandro Autoelétrica">
+        </figure>
+        <nav>
+          <a href="#bateria">Baterias</a>
+          <a href="#">Serviços</a>
+          <a href="#comentarios">Depoimentos</a>
+          <a href="#location">Localização</a>
+        </nav>
+      </div>
 
-        <div class="container-banner">
-            <h1>Baterias, parte elétrica e serviços especializados</h1>
-            <a href="#">Fale consco</a>
-        </div>
+      <div class="container-banner">
+        <h1>Baterias, parte elétrica e <br> serviços especializados</h1>
+        <h2>Entre em contato e solicite seu orçamento</h2>
+        <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521972355266" target="_blank">
+          <span>Fale conosco</span>
+
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+          </svg>
+        </a>
+      </div>
     </header>
+
     <main>
-        <section class="container-conteudo">
-            <div id="bateria" class="baterias">
-                <h3>Baterias</h3>
-                <div class="baterias-img">
-                    <figure><img src="../assets/acdelco.jpg" alt="Bateria Acdelco"></figure>
-                    <figure><img src="../assets/bosch.png" alt="Bateria Bosch"></figure>
-                    <figure><img src="../assets/heliar.jpg" alt="Bateria Heliar"></figure>
-                    <figure><img src="../assets/herbo.png" alt="Bateria Herbo"></figure>
-                    <figure><img src="../assets/moura.jpg" alt="Bateria Moura"></figure>
-                    <figure><img src="../assets/reifor.jpg" alt="Bateria Reifor"></figure>
-                    <figure><img src="../assets/zetta.jpg" alt="Bateria Zetta"></figure>
-                </div>
+      <section class="container-conteudo">
+        <div id="bateria" class="baterias">
+          <h3>Baterias</h3>
+          <div class="baterias-img">
+            <img src="../assets/acdelco.jpg" alt="Bateria Acdelco">
+            <img src="../assets/bosch.png" alt="Bateria Bosch">
+            <img src="../assets/heliar.jpg" alt="Bateria Heliar">
+            <img src="../assets/herbo.png" alt="Bateria Herbo">
+            <img src="../assets/moura.jpg" alt="Bateria Moura">
+            <img src="../assets/reifor.jpg" alt="Bateria Reifor">
+            <img src="../assets/zetta.jpg" alt="Bateria Zetta">
+          </div>
+        </div>
+      </section>
+
+      <section class="container-conteudo">
+        <h3>Nossas Avaliações</h3>
+
+        <div id="comentarios" class="jcarousel">
+          <div class="container-box-comentarios">
+            <div class="box-comentario">
+              <p class="cometario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat sed hic veritatis, repudiandae quam illo sint enim assumenda natus
+                ipsum molestias repellendus recusandae possimus officia quibusdam ipsam tempore libero.</p>
+              <div class="autor-avaliacao">
+                <span>estrelas</span>
+                <span>Nome do autor</span>
+              </div>
             </div>
-        </section>
-        <section class="container-conteudo">
-            <div id="comentarios" class="comentarios">
-                <h3>Nossas Avaliações</h3>
-                <div class="container-box-comentarios">
-                    <div class="box-comentario">
-                        <p class="cometario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat sed hic veritatis, repudiandae quam illo sint enim assumenda natus ipsum molestias repellendus recusandae possimus officia quibusdam ipsam tempore libero.</p>
-                        <div class="autor-avaliacao">
-                            <span>estrelas</span>
-                            <span>Nome do autor</span>
-                        </div>
-                    </div>
-                    <div class="box-comentario">
-                        <p class="cometario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat sed hic veritatis, repudiandae quam illo sint enim assumenda natus ipsum molestias repellendus recusandae possimus officia quibusdam ipsam tempore libero.</p>
-                        <div class="autor-avaliacao">
-                            <span>estrelas</span>
-                            <span>Nome do autor</span>
-                        </div>
-                    </div>
-                    <div class="box-comentario">
-                        <p class="cometario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat sed hic veritatis, repudiandae quam illo sint enim assumenda natus ipsum molestias repellendus recusandae possimus officia quibusdam ipsam tempore libero.</p>
-                        <div class="autor-avaliacao">
-                            <span>estrelas</span>
-                            <span>Nome do autor</span>
-                        </div>
-                    </div>
-                </div>
+
+            <div class="box-comentario">
+              <p class="cometario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat sed hic veritatis, repudiandae quam illo sint enim assumenda natus
+                ipsum molestias repellendus recusandae possimus officia quibusdam ipsam tempore libero.</p>
+              <div class="autor-avaliacao">
+                <span>estrelas</span>
+                <span>Nome do autor</span>
+              </div>
             </div>
-        </section>
-        <section class="container-conteudo">
-            <div id="location" class="location">
-                <h3>Onde estamos</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.0497524608195!2d-43.28815118560395!3d-22.87462044247353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997c5bfff89eb9%3A0xfdf49e1723ec658c!2sAv.%20Pastor%20Martin%20Luther%20King%20J%C3%BAnior%2C%201889%20-%20Inhauma%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2020761-120!5e0!3m2!1spt-BR!2sbr!4v1646176571441!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+            <div class="box-comentario">
+              <p class="cometario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quaerat sed hic veritatis, repudiandae quam illo sint enim assumenda natus
+                ipsum molestias repellendus recusandae possimus officia quibusdam ipsam tempore libero.</p>
+              <div class="autor-avaliacao">
+                <span>estrelas</span>
+                <span>Nome do autor</span>
+              </div>
             </div>
-        </section>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="container-conteudo">
+        <div id="location" class="location">
+          <h3>Onde estamos</h3>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.0497524608195!2d-43.28815118560395!3d-22.87462044247353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997c5bfff89eb9%3A0xfdf49e1723ec658c!2sAv.%20Pastor%20Martin%20Luther%20King%20J%C3%BAnior%2C%201889%20-%20Inhauma%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2020761-120!5e0!3m2!1spt-BR!2sbr!4v1646176571441!5m2!1spt-BR!2sbr"
+            width="" height="" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+      </section>
     </main>
+
     <footer></footer>
+
     <script src="/js/jquery-3.6.0.js"></script>
     <script src="/js/index.js"></script>
-</body>
+  </body>
 
 </html>
