Atualizando url dos diretórios dos arquivis no html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandro Autoelétrica</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
 
   <body>
@@ -41,13 +41,13 @@
         <div id="bateria" class="baterias">
           <h3>Baterias</h3>
           <div class="baterias-img">
-            <img src="../assets/acdelco.jpg" alt="Bateria Acdelco">
-            <img src="../assets/bosch.png" alt="Bateria Bosch">
-            <img src="../assets/heliar.jpg" alt="Bateria Heliar">
-            <img src="../assets/herbo.png" alt="Bateria Herbo">
-            <img src="../assets/moura.jpg" alt="Bateria Moura">
-            <img src="../assets/reifor.jpg" alt="Bateria Reifor">
-            <img src="../assets/zetta.jpg" alt="Bateria Zetta">
+            <img src="assets/acdelco.jpg" alt="Bateria Acdelco">
+            <img src="assets/bosch.png" alt="Bateria Bosch">
+            <img src="assets/heliar.jpg" alt="Bateria Heliar">
+            <img src="assets/herbo.png" alt="Bateria Herbo">
+            <img src="assets/moura.jpg" alt="Bateria Moura">
+            <img src="assets/reifor.jpg" alt="Bateria Reifor">
+            <img src="assets/zetta.jpg" alt="Bateria Zetta">
           </div>
         </div>
       </section>
