Atualizando url do diretório da logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container-navg">
         <figure>
-          <img src="/assets/logo-completa.png" alt="Sandro Autoelétrica">
+          <img src="assets/logo-completa.png" alt="Sandro Autoelétrica">
         </figure>
         <nav>
           <a href="#bateria">Baterias</a>
