Atualização do espaçamento dos comentarios

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      
+    </footer>
 
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/owl.carousel.min.js"></script>
