--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
         <div id="bateria" class="baterias">
           <h3>Baterias</h3>
           <div class="baterias-img">
-            <img src="assets/acdelco.jpg" alt="Bateria Acdelco">
+            <img src="assets/acdelco.png" alt="Bateria Acdelco">
             <img src="assets/bosch.png" alt="Bateria Bosch">
-            <img src="assets/heliar.jpg" alt="Bateria Heliar">
+            <img src="assets/heliar.png" alt="Bateria Heliar">
             <img src="assets/herbo.png" alt="Bateria Herbo">
-            <img src="assets/moura.jpg" alt="Bateria Moura">
-            <img src="assets/reifor.jpg" alt="Bateria Reifor">
-            <img src="assets/zetta.jpg" alt="Bateria Zetta">
+            <img src="assets/moura.png" alt="Bateria Moura">
+            <img src="assets/reifor.png" alt="Bateria Reifor">
+            <img src="assets/zetta.png" alt="Bateria Zetta">
           </div>
         </div>
       </section>
 
       <!-- Avaliações -->
       <section class="container-conteudo">
-        <h3>Nossas Avaliações</h3>
+        <h3>Centenas de clientes satisfeitos.</h3>
         <div class="container-box-comentarios"></div>
         <a class="link-comentarios-google"
           href="https://www.google.com/search?q=sandros+auto+eletrica&oq=sa&aqs=chrome.0.69i59j35i39j69i57j35i39j46i131i199i291i433i512j69i60l2j69i61.728j0j4&sourceid=chrome&ie=UTF-8#lrd=0x997c5c00041c85:0xe462e89279789438,1,,,"
@@ -75,7 +75,30 @@
     </main>
 
     <footer>
-      
+      <div class="conteudo-footer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+          <path
+            d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+        </svg>(00) 0000-0000
+      </div>
+
+      <div class="conteudo-footer">
+        <a class="dev-creator" href="https://www.linkedin.com/in/eric-vilarino-de-freitas-18920851/" target="_blank" rel="noopener noreferrer">
+          &#169;Eric Freitas
+        </a>
+      </div>
+
+      <div class="conteudo-footer">
+        <nav class="redes-sociais">
+          <a href="https://www.facebook.com/profile.php?id=615725265138263" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+              <path
+                d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+            </svg>
+          </a>
+        </nav>
+      </div>
+
     </footer>
 
     <script src="js/jquery-3.6.0.js"></script>
