Correção de font, erros no console e atualização de estilos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandro Autoelétrica</title>
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/estilo.css">
   </head>
 
@@ -58,7 +56,7 @@
 
       <!-- Avaliações -->
       <section class="container-conteudo">
-        <h3>Centenas de clientes satisfeitos.</h3>
+        <h3>Centenas de clientes satisfeitos</h3>
         <div class="container-box-comentarios"></div>
         <a class="link-comentarios-google"
           href="https://www.google.com/search?q=sandros+auto+eletrica&oq=sa&aqs=chrome.0.69i59j35i39j69i57j35i39j46i131i199i291i433i512j69i60l2j69i61.728j0j4&sourceid=chrome&ie=UTF-8#lrd=0x997c5c00041c85:0xe462e89279789438,1,,,"
@@ -84,7 +82,7 @@
 
       <div class="conteudo-footer">
         <a class="dev-creator" href="https://www.linkedin.com/in/eric-vilarino-de-freitas-18920851/" target="_blank" rel="noopener noreferrer">
-          &#169;Eric Freitas
+          &#169;Por Eric Freitas
         </a>
       </div>
 
@@ -102,7 +100,6 @@
     </footer>
 
     <script src="js/jquery-3.6.0.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
     <script src="js/index.js"></script>
   </body>
 
