--- a/index.html
+++ b/index.html
@@ -7,65 +7,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandro Autoelétrica</title>
     <link rel="stylesheet" href="css/estilo.css">
-    <link rel="shortcut icon" type="imagex/png" href="assets/logo-small.png">
+    <link rel="shortcut icon" type="imagex/png" href="assets/logo-small.webp">
   </head>
 
   <body>
     <header>
       <div class="container-navg">
-        <figure>
-          <img src="assets/logo-completa.png" alt="Sandro Autoelétrica">
-        </figure>
-        <nav>
+        <picture>
+          <source media="(max-width: 800px)" srcset="assets/logo-small.webp">
+          <img src="assets/logo-completa.webp" alt="Sandro Autoelétrica">
+        </picture>
+        <nav class="navg-menu">
           <a href="#bateria">Baterias</a>
           <a href="#">Serviços</a>
           <a href="#comentarios">Depoimentos</a>
           <a href="#location">Localização</a>
         </nav>
+
+        <nav class="navg-menu-responsivo">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M0 96C0 78.33 14.33 64 32 64H416C433.7 64 448 78.33 448 96C448 113.7 433.7 128 416 128H32C14.33 128 0 113.7 0 96zM0 256C0 238.3 14.33 224 32 224H416C433.7 224 448 238.3 448 256C448 273.7 433.7 288 416 288H32C14.33 288 0 273.7 0 256zM416 448H32C14.33 448 0 433.7 0 416C0 398.3 14.33 384 32 384H416C433.7 384 448 398.3 448 416C448 433.7 433.7 448 416 448z"/></svg>
+        </nav>
       </div>
 
       <div class="container-banner">
-        <h1>Baterias, parte elétrica e <br> serviços especializados</h1>
-        <h2>Entre em contato e solicite seu orçamento</h2>
-        <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521972355266" target="_blank">
-          <span>Fale conosco</span>
+        <div class="miolo-banner">
+          <h1>Baterias, parte elétrica e <br> serviços especializados</h1>
+          <h2>Entre em contato e solicite seu orçamento</h2>
+          <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de fazer um orçamento!" target="_blank">
+            <span>Fale conosco</span>
 
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-            <path
-              d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
-          </svg>
-        </a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+              <path
+                d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+            </svg>
+          </a>
+        </div>
       </div>
     </header>
 
     <main>
       <!-- Baterias -->
-      <section class="container-conteudo">
-        <div id="bateria" class="baterias">
+      <section id="bateria" class="container-conteudo">
+        <div class="baterias">
           <h3>Baterias</h3>
           <div class="baterias-img">
-            <img src="assets/acdelco.png" alt="Bateria Acdelco">
-            <img src="assets/bosch.png" alt="Bateria Bosch">
-            <img src="assets/heliar.png" alt="Bateria Heliar">
-            <img src="assets/herbo.png" alt="Bateria Herbo">
-            <img src="assets/moura.png" alt="Bateria Moura">
-            <img src="assets/reifor.png" alt="Bateria Reifor">
-            <img src="assets/zetta.png" alt="Bateria Zetta">
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Moura!" target="_blank">
+              <img src="assets/moura.webp" alt="Bateria Moura">
+            </a>
+
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Heliar!" target="_blank">
+              <img src="assets/heliar.webp" alt="Bateria Heliar">
+            </a>
+
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Acdelco!" target="_blank">
+              <img src="assets/acdelco.webp" alt="Bateria Acdelco">
+            </a>
+
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Bosch!" target="_blank">
+              <img src="assets/bosch.webp" alt="Bateria Bosch">
+            </a>
+
+
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Herbo!" target="_blank">
+              <img src="assets/herbo.webp" alt="Bateria Herbo">
+            </a>
+
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Reifor!" target="_blank">
+              <img src="assets/reifor.webp" alt="Bateria Reifor">
+            </a>
           </div>
         </div>
       </section>
 
       <!-- Avaliações -->
-      <section class="container-conteudo">
+      <section id="comentarios" class="container-conteudo comentarios">
         <h3>Centenas de clientes satisfeitos</h3>
-        <div class="container-box-comentarios"></div>
+
+        <div class="container-box-comentarios">
+          <div class="box-comentario item">
+            <p class="cometario">Sandro é um profissional com mais de 30 anos no local em loja que herdou de seu pai. Competência e honestidade. Querido dos
+              taxistas. Chega cedo, a loja costuma estar sempre cheia.</p>
+            <div class="autor-comentario">Ulisses Barreto de Freitas</div>
+          </div>
+
+          <div class="box-comentario item">
+            <p class="cometario">Atendimento nota 1000. Todos demonstram muito conhecimento e profissionalismo. Não há pressa em te atender. Você sente o
+              interesse em resolver o problema do seu carro. Recomendo essa oficina.</p>
+            <div class="autor-comentario">Rodolfo Cintra</div>
+          </div>
+
+          <div class="box-comentario item">
+            <p class="cometario">Há mais de 15 anos frequento essa oficina que vem atravessando gerações sem perder a qualidade e o respeito aos clientes.
+              Profissionais super capacitados, corretos e mto cordiais. Parabéns Sandro e equipe. Obrigado sempre.</p>
+            <div class="autor-comentario">Riva Ger</div>
+          </div>
+
+          <div class="box-comentario item">
+            <p class="cometario">Se honestidade é um diferencial neste ramo. Esta oficina possui. Tratamento ímpar dado pelo dono. Recomendadíssimo. Resolveu o
+              meu problema rápido e com preço justo.</p>
+            <div class="autor-comentario">Rafael Teixeira Queiroz</div>
+          </div>
+
+          <div class="box-comentario item">
+            <p class="cometario">Fui por recomendação e enquanto esperava a abertura da oficina, todos os clientes que chegavam, falavam muito bem do serviço.
+            </p>
+            <div class="autor-comentario">Cezar Valle</div>
+          </div>
+
+          <div class="box-comentario item">
+            <p class="cometario">Muito bom Muito honesto recomendo sem medo com certeza fui a primeira vez e irei sempre que precisar. Muito 👍 bom!</p>
+            <div class="autor-comentario">Antônio Rodrigues</div>
+          </div>
+        </div>
+
         <a class="link-comentarios-google"
           href="https://www.google.com/search?q=sandros+auto+eletrica&oq=sa&aqs=chrome.0.69i59j35i39j69i57j35i39j46i131i199i291i433i512j69i60l2j69i61.728j0j4&sourceid=chrome&ie=UTF-8#lrd=0x997c5c00041c85:0xe462e89279789438,1,,,"
           target="_blank">Veja todas as avalições</a>
       </section>
 
       <!-- Localização -->
-      <section class="container-conteudo">
+      <section id="location" class="container-conteudo location">
         <h3>Onde estamos</h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.0497524608195!2d-43.28815118560395!3d-22.87462044247353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997c5bfff89eb9%3A0xfdf49e1723ec658c!2sAv.%20Pastor%20Martin%20Luther%20King%20J%C3%BAnior%2C%201889%20-%20Inhauma%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2020761-120!5e0!3m2!1spt-BR!2sbr!4v1646176571441!5m2!1spt-BR!2sbr"
@@ -75,10 +136,12 @@
 
     <footer>
       <div class="conteudo-footer">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
-          <path
-            d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-        </svg>(00) 0000-0000
+        <a href="tel:+5521000000000">
+          <span>(00) 0000-0000</span>
+        </a>
+        <a href="mailto:lorem@ipsun.com.br">
+          <span>lorem@ipsun.com.br</span>
+        </a>
       </div>
 
       <div class="conteudo-footer">
