--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </picture>
         <nav class="navg-menu">
           <a href="#bateria">Baterias</a>
-          <a href="#">Serviços</a>
+          <a href="#services">Serviços</a>
           <a href="#comentarios">Depoimentos</a>
           <a href="#location">Localização</a>
         </nav>
@@ -79,6 +79,23 @@
         </div>
       </section>
 
+      <!-- Serviços -->
+      <section id="services" class="container-conteudo services">
+        <h3>Serviços</h3>
+          <ul class="service-list">
+            <li>Sistema de iluminação</li>
+            <li>Troca de bateria do veículo</li>
+            <li>Conserto alternador</li>
+            <li>Motor de arranque</li>
+            <li>Ventoinhas</li>
+            <li>Vidros elétricos</li>
+          </ul>
+
+          <a class="orcamento-services"
+          href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de fazer um orçamento!"
+          target="_blank">Faça um orçamento</a>
+      </section>
+
       <!-- Avaliações -->
       <section id="comentarios" class="container-conteudo comentarios">
         <h3>Centenas de clientes satisfeitos</h3>
@@ -135,14 +152,14 @@
     </main>
 
     <footer>
-      <div class="conteudo-footer">
+      <!-- <div class="conteudo-footer">
         <a href="tel:+5521000000000">
           <span>(00) 0000-0000</span>
         </a>
         <a href="mailto:lorem@ipsun.com.br">
           <span>lorem@ipsun.com.br</span>
         </a>
-      </div>
+      </div> -->
 
       <div class="conteudo-footer">
         <a class="dev-creator" href="https://www.linkedin.com/in/eric-vilarino-de-freitas-18920851/" target="_blank" rel="noopener noreferrer">
@@ -150,7 +167,7 @@
         </a>
       </div>
 
-      <div class="conteudo-footer">
+      <!-- <div class="conteudo-footer">
         <nav class="redes-sociais">
           <a href="https://www.facebook.com/profile.php?id=615725265138263" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -159,7 +176,7 @@
             </svg>
           </a>
         </nav>
-      </div>
+      </div> -->
 
     </footer>
 
