--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sandro Autoelétrica</title>
-  <link rel="stylesheet" href="css/estilo.css?=1.2">
-  <link rel="shortcut icon" type="imagex/png" href="assets/logo-small.webp">
+  <meta name="description" content="Sandro Autoelétrica - Serviços especializados em parte elétrica automotiva e baterias de qualidade.">
+  <title>Sandro Autoelétrica - Serviços Elétricos Automotivos</title>
+  <link rel="stylesheet" href="css/estilo.css?=1.3">
+  <link rel="shortcut icon" type="image/webp" href="assets/logo-small.webp">
 </head>
 
 <body>
@@ -41,14 +42,14 @@
 
     <div class="container-banner">
       <div class="miolo-banner">
-        <h1>Baterias, parte elétrica e <br> serviços especializados</h1>
+        <h1>Baterias, parte elétrica e serviços especializados</h1>
         <h2>Entre em contato e solicite seu orçamento</h2>
         <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de fazer um orçamento!"
-          target="_blank">
+          target="_blank" rel="noopener" aria-label="Fale conosco pelo WhatsApp">
           <span>Fale conosco</span>
 
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-whatsapp"
-            viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-whatsapp"
+            viewBox="0 0 16 16" aria-hidden="true">
             <path
               d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
           </svg>
@@ -61,7 +62,8 @@
     <!-- Baterias -->
     <section id="bateria" class="container-conteudo">
       <div class="baterias">
-        <h3>Baterias</h3>
+        <h3>Baterias de Qualidade</h3>
+        <p class="section-description">Trabalhamos com as melhores marcas do mercado para garantir a qualidade e durabilidade da bateria do seu veículo.</p>
         <div class="baterias-img">
           <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de informações sobre baterias Moura!"
             target="_blank">
@@ -99,7 +101,8 @@
 
     <!-- Serviços -->
     <section id="services" class="container-conteudo services">
-      <h3>Serviços</h3>
+      <h3>Nossos Serviços</h3>
+      <p class="section-description">Oferecemos serviços especializados para a parte elétrica do seu veículo, com profissionais experientes e equipamentos modernos.</p>
       <ul class="service-list">
         <li>Sistema de iluminação</li>
         <li>Troca de bateria do veículo</li>
@@ -116,7 +119,8 @@
 
     <!-- Avaliações -->
     <section id="comentarios" class="container-conteudo comentarios">
-      <h3>Centenas de clientes satisfeitos</h3>
+      <h3>Clientes Satisfeitos</h3>
+      <p class="section-description">Confira o que nossos clientes dizem sobre nossos serviços.</p>
 
       <div class="container-box-comentarios">
         <div class="box-comentario item">
@@ -168,10 +172,11 @@
 
     <!-- Localização -->
     <section id="location" class="container-conteudo location">
-      <h3>Onde estamos</h3>
+      <h3>Onde Estamos</h3>
+      <p class="section-description">Venha nos visitar! Estamos localizados em um ponto de fácil acesso.</p>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.0497524608195!2d-43.28815118560395!3d-22.87462044247353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997c5bfff89eb9%3A0xfdf49e1723ec658c!2sAv.%20Pastor%20Martin%20Luther%20King%20J%C3%BAnior%2C%201889%20-%20Inhauma%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2020761-120!5e0!3m2!1spt-BR!2sbr!4v1646176571441!5m2!1spt-BR!2sbr"
-        width="" height="" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        title="Localização da Sandro Autoelétrica" allowfullscreen="" loading="lazy"></iframe>
     </section>
   </main>
 
@@ -225,6 +230,19 @@
       </a>
     </div>
   </footer>
+
+  <!-- Botão flutuante do WhatsApp -->
+  <a href="https://api.whatsapp.com/send?1=pt_br&phone=5521000000000&text=Olá, gostaria de fazer um orçamento!" 
+     class="whatsapp-float" 
+     target="_blank" 
+     rel="noopener" 
+     aria-label="Fale conosco pelo WhatsApp">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-whatsapp"
+      viewBox="0 0 16 16" aria-hidden="true">
+      <path
+        d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+    </svg>
+  </a>
 
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/index.js"></script>
