--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sandro Autoelétrica - Serviços especializados em parte elétrica automotiva e baterias de qualidade.">
   <title>Sandro Autoelétrica - Serviços Elétricos Automotivos</title>
-  <link rel="stylesheet" href="css/estilo.css?=1.3">
+  <link rel="stylesheet" href="css/estilo.css?v=1.3">
   <link rel="shortcut icon" type="image/webp" href="assets/logo-small.webp">
 </head>
 
@@ -244,8 +244,8 @@
     </svg>
   </a>
 
-  <script src="js/jquery-3.6.0.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/jquery-3.6.0.js?v=1.0"></script>
+  <script src="js/index.js?v=1.0"></script>
 </body>
 
 </html>
