--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </svg>
   </a>
 
-  <script src="js/jquery-3.6.0.js?v=1.0"></script>
+  <script src="js/jquery-3.6.0.js"></script>
   <script src="js/index.js?v=1.0"></script>
 </body>
 
